--- a/index.html.files/p112.html
+++ b/index.html.files/p112.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g41'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g504'}, "*");
 </script>
 <div class="cwrap">
 <h1>Александра</h1>
-<p>Родилась: 0000<br />Умерла: ?<br />Детей нет<br />(1923-1930)<br /></p><p>Отец: <a href="p69.html?s=40e5bd3c35ef38b9">Гаврил Дмитриевич Былахиров</a><br />Мать: <a href="p70.html?s=40e5bd3c35ef38b9">Ульяна Христофоровна Большакова</a><br />Брат: <a href="p5.html?s=40e5bd3c35ef38b9">Кузьма Блахиров</a><br /></p>
+<p>Родилась: 0000<br />Умерла: ?<br />Род: Блахировы<br />Детей нет<br />(1923-1930)<br /></p><p>Отец: <a href="p69.html?s=40e67b3a001d5877">Гаврил Дмитриевич Былахиров</a><br />Мать: <a href="p70.html?s=40e67b3a001d5877">Ульяна Христофоровна Большакова</a><br />Брат: <a href="p5.html?s=40e67b3a001d5877">Кузьма Гаврильевич Былахиров</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
