--- a/index.html.files/p113.html
+++ b/index.html.files/p113.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g282'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g744'}, "*");
 </script>
 <div class="cwrap">
 <h1>?</h1>
-<p>Умер: ?<br /></p><p>Сын: <a href="p71.html?s=40e5bd3c35ef38b9">Христофор Большаков</a><br />Сын: <a href="p114.html?s=40e5bd3c35ef38b9">Федот</a><br />Сын: <a href="p115.html?s=40e5bd3c35ef38b9">Лааhар</a><br />Сын: <a href="p116.html?s=40e5bd3c35ef38b9">Токхай Дьогуордээн</a><br /></p>
+<p>Умер: ?<br /></p><p>Сын: <a href="p71.html?s=40e67b3a001d5877">Христофор Большаков</a><br />Сын: <a href="p114.html?s=40e67b3a001d5877">Федот</a><br />Сын: <a href="p115.html?s=40e67b3a001d5877">Лааhар</a><br />Сын: <a href="p116.html?s=40e67b3a001d5877">Тоххой Дьогуордээн</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
