--- a/index.html.files/p115.html
+++ b/index.html.files/p115.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g294'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g756'}, "*");
 </script>
 <div class="cwrap">
 <h1>Лааhар</h1>
-<p>Родился: ?<br />Умер: ?<br />(Ганя, Боккуойа)<br /></p><p>Отец: <a href="p113.html?s=40e5bd3c35ef38b9">?</a><br />Брат: <a href="p71.html?s=40e5bd3c35ef38b9">Христофор Большаков</a><br />Брат: <a href="p114.html?s=40e5bd3c35ef38b9">Федот</a><br />Брат: <a href="p116.html?s=40e5bd3c35ef38b9">Токхай Дьогуордээн</a><br /></p>
+<p>Родился: ?<br />Умер: ?<br />(Ганя, Боккуойа)<br /></p><p>Отец: <a href="p113.html?s=40e67b3a001d5877">?</a><br />Брат: <a href="p71.html?s=40e67b3a001d5877">Христофор Большаков</a><br />Брат: <a href="p114.html?s=40e67b3a001d5877">Федот</a><br />Брат: <a href="p116.html?s=40e67b3a001d5877">Тоххой Дьогуордээн</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
