--- a/index.html.files/p119.html
+++ b/index.html.files/p119.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g43'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Василий Федорович Игнатьев</h1>
+<p>Родился: 14.01.1910<br />Умер: 1990<br />Продолжительность жизни: 79<br /></p><p>Жена: <a href="p118.html?s=40e67b3a001d5877">Александра Иннокентьевна Попова</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p120.html?s=40e67b3a001d5877">Валерий Васильевич Игнатьев</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p122.html?s=40e67b3a001d5877">Федора Васильевна Неустроева (Игнатьева)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p143.html?s=40e67b3a001d5877">Розалия Васильевна Ючюгяева (Игнатьева)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p155.html?s=40e67b3a001d5877">Михаил Васильевич Игнатьев</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p156.html?s=40e67b3a001d5877">Александра Васильевна Павлова (Игнатьева)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p206.html?s=40e67b3a001d5877">Василий Васильевич Игнатьев</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p215.html?s=40e67b3a001d5877">Прасковья Васильевна (Игнатьева)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p221.html?s=40e67b3a001d5877">Валентина Васильевна Попова (Павлова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p241.html?s=40e67b3a001d5877">Елена Васильевна (Игнатьева)</a><br /></p>
 
 <div class="c"></div>
 </div>
