--- a/index.html.files/p130.html
+++ b/index.html.files/p130.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g141'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Эркин Аркадьевич Николаев</h1>
+<p>Родился: 15.03.2015<br />Возраст: 10<br /></p><p>Отец: <a href="p128.html?s=40e67b3a001d5877">Аркадий Николаевич Николаев</a><br />Мать: <a href="p127.html?s=40e67b3a001d5877">Туяра Вячеславовна Николаева (Нехчоенова)</a><br />Брат: <a href="p129.html?s=40e67b3a001d5877">Байдам Аркадьевич Николаев</a><br /></p>
 
 <div class="c"></div>
 </div>
