--- a/index.html.files/p131.html
+++ b/index.html.files/p131.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g127'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Светлана Вячеславовна (Нехчоенова)</h1>
+<p>Родилась: 15.12.1987<br />Возраст: 38<br /></p><p>Отец: <a href="p126.html?s=40e67b3a001d5877">Вячеслав Иванович Нехчоенов</a><br />Мать: <a href="p125.html?s=40e67b3a001d5877">Надежда Григорьевна (Бочурова)</a><br />Сестра: <a href="p127.html?s=40e67b3a001d5877">Туяра Вячеславовна Николаева (Нехчоенова)</a><br />Брат: <a href="p133.html?s=40e67b3a001d5877">Иван Вячеславович Нехчоенов</a><br />Дочь: <a href="p132.html?s=40e67b3a001d5877">Карина Доусон</a><br /></p>
 
 <div class="c"></div>
 </div>
