--- a/index.html.files/p145.html
+++ b/index.html.files/p145.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g169'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Лаура Дмитриевна (Ючюгяева)</h1>
+<p>Родилась: 22.06.1977<br />Возраст: 48<br />ФЭИ СГУ бутэрбитэ. Идэтэ - экономист, финансист. &nbsp;Билигин бэйэтэ &nbsp;бизнестээх.<br /></p><p>Отец: <a href="p144.html?s=40e67b3a001d5877">Дмитрий Иванович Ючюгяев</a><br />Мать: <a href="p143.html?s=40e67b3a001d5877">Розалия Васильевна Ючюгяева (Игнатьева)</a><br />Брат: <a href="p151.html?s=40e67b3a001d5877">Иван Дмитриевич Ючюгяев</a><br />Муж: <a href="p146.html?s=40e67b3a001d5877">Анатолий Васильевич Кривошапкин</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p148.html?s=40e67b3a001d5877">Юлита Анатольевна (Кривошапкина)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p149.html?s=40e67b3a001d5877">Вячеслав Анатольевич Кривошапкин</a><br />Муж: <a href="p147.html?s=40e67b3a001d5877">Андрей Степанович Насыпайко</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p150.html?s=40e67b3a001d5877">Данил Андреевич Насыпайко</a><br /></p>
 
 <div class="c"></div>
 </div>
