--- a/index.html.files/p160.html
+++ b/index.html.files/p160.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g234'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Ираида Сергеевна (Гуляева)</h1>
+<p>Родилась: 22.09.1993<br />Возраст: 32<br />ХИФУ – ну бүтэрбитэ, идэтэ – городское строительство. Чааһынай &nbsp;тутуу тэрилтэтигэр &nbsp;идэтинэн үлэлиир.<br /></p><p>Отец: <a href="p159.html?s=40e67b3a001d5877">Сергей Николаевич Гуляев</a><br />Мать: <a href="p158.html?s=40e67b3a001d5877">Алина Ивановна Гуляева (Павлова)</a><br />Сестра: <a href="p161.html?s=40e67b3a001d5877">Моника Сергеевна Гуляева (Гуляев)</a><br />Брат: <a href="p163.html?s=40e67b3a001d5877">Сергей Сергеевич Гуляев</a><br />Дочь: <a href="p162.html?s=40e67b3a001d5877">Динара Темирлановна (Гуляева)</a><br /></p>
 
 <div class="c"></div>
 </div>
