--- a/index.html.files/p193.html
+++ b/index.html.files/p193.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g304'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Дмитрий Егорович Коркин</h1>
+<p>Родился: 14.02.2005<br />Возраст: 20<br />приемный сын<br /></p><p>Отец: <a href="p178.html?s=40e67b3a001d5877">Станислав Вячеславович Сивцев</a><br />Мать: <a href="p177.html?s=40e67b3a001d5877">Яна Ивановна Сивцева (Павлова)</a><br />Сестра: <a href="p179.html?s=40e67b3a001d5877">Лиана Станиславовна Томская (Сивцев)</a><br />Сестра: <a href="p183.html?s=40e67b3a001d5877">Анжелика Станиславовна (Сивцева)</a><br />Сестра: <a href="p189.html?s=40e67b3a001d5877">Кристина Станиславовна (Сивцева)</a><br />Сестра: <a href="p185.html?s=40e67b3a001d5877">Ариана Станиславовна Корнилова (Сивцев)</a><br />Брат: <a href="p194.html?s=40e67b3a001d5877">Султан Станиславович Сивцев</a><br />Сестра: <a href="p195.html?s=40e67b3a001d5877">Снежана Станиславовна (Сивцева)</a><br />Брат: <a href="p196.html?s=40e67b3a001d5877">Тимур Станиславович Сивцев</a><br />Сестра: <a href="p197.html?s=40e67b3a001d5877">Аделина Станиславовна (Сивцева)</a><br /></p>
 
 <div class="c"></div>
 </div>
