--- a/index.html.files/p110.html
+++ b/index.html.files/p110.html
@@ -29,14 +29,14 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g423'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g885'}, "*");
 </script>
 <div class="cwrap">
-<h1>Феодул</h1>
-<p>Родился: 25.03.1886<br />Умер: ?<br />Род: Дайбанныровы<br />(Акимовтар, Очировтар эhэлэрэ, хос эhэлэрэ)<br /></p><p>Отец: <a href="p101.html?s=40e5bd3c35ef38b9">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e5bd3c35ef38b9">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e5bd3c35ef38b9">Устиния (Татаринов)</a><br />Сестра: <a href="p107.html?s=40e5bd3c35ef38b9">Васса</a><br />Сестра: <a href="p108.html?s=40e5bd3c35ef38b9">Евфимия</a><br />Сестра: <a href="p86.html?s=40e5bd3c35ef38b9">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e5bd3c35ef38b9">Александра</a><br /></p>
+<h1>Феодул Иванович Татаринов</h1>
+<p>Родился: 25.03.1886<br />Умер: ?<br />Род: Дайбанныровы<br />(Акимовтар, Очировтар эhэлэрэ, хос эhэлэрэ)<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p108.html?s=40e67b3a001d5877">Евфимия Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
 
 <div class="c"></div>
 </div>
-<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 21.11.2021</span></div>
+<div class="pblock c"></div><div class="c"><span class="reps">Дата построения отчёта: 19.01.2026</span></div>
 </body>
 </html>
