--- a/index.html.files/p120.html
+++ b/index.html.files/p120.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g49'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Валерий Васильевич Игнатьев</h1>
+<p>Родился: 12.04.1943<br />Умер: 1992<br />Продолжительность жизни: 48<br /></p><p>Отец: <a href="p119.html?s=40e67b3a001d5877">Василий Федорович Игнатьев</a><br />Мать: <a href="p118.html?s=40e67b3a001d5877">Александра Иннокентьевна Попова</a><br />Сестра: <a href="p122.html?s=40e67b3a001d5877">Федора Васильевна Неустроева (Игнатьева)</a><br />Сестра: <a href="p143.html?s=40e67b3a001d5877">Розалия Васильевна Ючюгяева (Игнатьева)</a><br />Брат: <a href="p155.html?s=40e67b3a001d5877">Михаил Васильевич Игнатьев</a><br />Сестра: <a href="p156.html?s=40e67b3a001d5877">Александра Васильевна Павлова (Игнатьева)</a><br />Брат: <a href="p206.html?s=40e67b3a001d5877">Василий Васильевич Игнатьев</a><br />Сестра: <a href="p215.html?s=40e67b3a001d5877">Прасковья Васильевна (Игнатьева)</a><br />Сестра: <a href="p221.html?s=40e67b3a001d5877">Валентина Васильевна Попова (Павлова)</a><br />Сестра: <a href="p241.html?s=40e67b3a001d5877">Елена Васильевна (Игнатьева)</a><br />Дочь: <a href="p121.html?s=40e67b3a001d5877">Елена Валерьевна Игнатьева (Игнатьев)</a><br /></p>
 
 <div class="c"></div>
 </div>
