--- a/index.html.files/p125.html
+++ b/index.html.files/p125.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g98'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Надежда Григорьевна (Бочурова)</h1>
+<p>Родилась: 11.04.1967<br />Возраст: 58<br /></p><p>Отец: <a href="p123.html?s=40e67b3a001d5877">Григорий Кузьмич Бочуров</a><br />Мать: <a href="p122.html?s=40e67b3a001d5877">Федора Васильевна Неустроева (Игнатьева)</a><br />Брат: <a href="p134.html?s=40e67b3a001d5877">Ян Григорьевич Бочуров</a><br />Брат: <a href="p135.html?s=40e67b3a001d5877">Андрей Григорьевич Бочуров</a><br />Брат: <a href="p136.html?s=40e67b3a001d5877">Олег Григорьевич Бочуров</a><br />Единоутробная сестра: <a href="p139.html?s=40e67b3a001d5877">Миролюба Владимировна Лукина (Неустроева)</a><br />Муж: <a href="p126.html?s=40e67b3a001d5877">Вячеслав Иванович Нехчоенов</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p127.html?s=40e67b3a001d5877">Туяра Вячеславовна Николаева (Нехчоенова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p131.html?s=40e67b3a001d5877">Светлана Вячеславовна (Нехчоенова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p133.html?s=40e67b3a001d5877">Иван Вячеславович Нехчоенов</a><br /></p>
 
 <div class="c"></div>
 </div>
