--- a/index.html.files/p151.html
+++ b/index.html.files/p151.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g175'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Иван Дмитриевич Ючюгяев</h1>
+<p>Родился: 03.12.1978<br />Возраст: 47<br />СГУ &nbsp;математика уонна &nbsp;информатика институтун бутэрбитэ. &nbsp;ПАО Ростелеком информационнай технология &nbsp;ведущай &nbsp;инженерэ.<br /></p><p>Отец: <a href="p144.html?s=40e67b3a001d5877">Дмитрий Иванович Ючюгяев</a><br />Мать: <a href="p143.html?s=40e67b3a001d5877">Розалия Васильевна Ючюгяева (Игнатьева)</a><br />Сестра: <a href="p145.html?s=40e67b3a001d5877">Лаура Дмитриевна (Ючюгяева)</a><br />Жена: <a href="p153.html?s=40e67b3a001d5877">Мария Аверьевна Ючюгяева</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p152.html?s=40e67b3a001d5877">Василий Иванович Ючюгяев</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p154.html?s=40e67b3a001d5877">Дмитрий Иванович Ючюгяев</a><br /></p>
 
 <div class="c"></div>
 </div>
