--- a/index.html.files/p153.html
+++ b/index.html.files/p153.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g176'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Мария Аверьевна Ючюгяева</h1>
+<p>Родилась: 28.03.1978<br />Возраст: 47<br />СГУ «Преподаватель математики» идэтин бутэрбитэ. &nbsp;О5о саадыгар доп.образование педагогунан улэлиир.<br /></p><p>Муж: <a href="p151.html?s=40e67b3a001d5877">Иван Дмитриевич Ючюгяев</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p152.html?s=40e67b3a001d5877">Василий Иванович Ючюгяев</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p154.html?s=40e67b3a001d5877">Дмитрий Иванович Ючюгяев</a><br /></p>
 
 <div class="c"></div>
 </div>
