--- a/index.html.files/p157.html
+++ b/index.html.files/p157.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g69'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Иван Иванович Павлов</h1>
+<p>Родился: 01.09.1949<br />Возраст: 76<br />байыаннай идэлээх, “За вклад в развитии Таттинского улуса” бэлиэ хаһаайына, Дьүлэй нэһилиэгин бочуоттаах олохтооҕо. Маһынан уһанар.<br /></p><p>Жена: <a href="p156.html?s=40e67b3a001d5877">Александра Васильевна Павлова (Игнатьева)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p158.html?s=40e67b3a001d5877">Алина Ивановна Гуляева (Павлова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p164.html?s=40e67b3a001d5877">Снежана Ивановна Хаптагаева (Павлова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p172.html?s=40e67b3a001d5877">Гаврил Иванович Павлов</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p177.html?s=40e67b3a001d5877">Яна Ивановна Сивцева (Павлова)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p198.html?s=40e67b3a001d5877">Иван Иванович Павлов</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p201.html?s=40e67b3a001d5877">Федор Иванович Павлов</a><br /></p>
 
 <div class="c"></div>
 </div>
