--- a/index.html.files/p159.html
+++ b/index.html.files/p159.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g204'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Сергей Николаевич Гуляев</h1>
+<p>Родился: 10.07.1971<br />Умер: 04.08.2012<br />Продолжительность жизни: 41<br />хаһаайыстыбатын маастара этэ. Идэтинэн теплоснабжение инженера. &nbsp;<br /></p><p>Жена: <a href="p158.html?s=40e67b3a001d5877">Алина Ивановна Гуляева (Павлова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p160.html?s=40e67b3a001d5877">Ираида Сергеевна (Гуляева)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p161.html?s=40e67b3a001d5877">Моника Сергеевна Гуляева (Гуляев)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p163.html?s=40e67b3a001d5877">Сергей Сергеевич Гуляев</a><br /></p>
 
 <div class="c"></div>
 </div>
