--- a/index.html.files/p165.html
+++ b/index.html.files/p165.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g209'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Гаврил Ильич Хаптагаев</h1>
+<p>Родился: 28.04.1969<br />Возраст: 56<br />1988 с. Одьулууннааҕы 13 СПТУ-га электрик – суопар идэтин баһылыыр. Билигин ОДьКХ ООО “Альтернатива” Туора Күөллээҕи филиалыгар сващигынан үлэлиир. 3 оҕолоохтор, 2 сиэннээхтэр.<br /></p><p>Жена: <a href="p164.html?s=40e67b3a001d5877">Снежана Ивановна Хаптагаева (Павлова)</a><br />&nbsp;&nbsp;&nbsp;Дочь: <a href="p166.html?s=40e67b3a001d5877">Ариада Гаврильевна Булатова (Хаптагаева)</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p170.html?s=40e67b3a001d5877">Герман Гаврильевич Хаптагаев</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p171.html?s=40e67b3a001d5877">Гаврил Гаврильевич Хаптагаев</a><br /></p>
 
 <div class="c"></div>
 </div>
