--- a/index.html.files/p171.html
+++ b/index.html.files/p171.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g261'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Гаврил Гаврильевич Хаптагаев</h1>
+<p>Родился: 18.11.2005<br />Возраст: 20<br />М.К.Аммосов аатынан ХИФУ КИТ программист идэтигэр 2-с курс студена.<br /></p><p>Отец: <a href="p165.html?s=40e67b3a001d5877">Гаврил Ильич Хаптагаев</a><br />Мать: <a href="p164.html?s=40e67b3a001d5877">Снежана Ивановна Хаптагаева (Павлова)</a><br />Сестра: <a href="p166.html?s=40e67b3a001d5877">Ариада Гаврильевна Булатова (Хаптагаева)</a><br />Брат: <a href="p170.html?s=40e67b3a001d5877">Герман Гаврильевич Хаптагаев</a><br /></p>
 
 <div class="c"></div>
 </div>
