--- a/index.html.files/p173.html
+++ b/index.html.files/p173.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g214'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Александра Григорьевна Павлова</h1>
+<p>Родилась: 26.02.1975<br />Возраст: 50<br />Ытык Күөл 2 № орто оскуолатын начальнай кылааһын &nbsp;учуутала. Дьиэ сибэккитин кэрэхсээн үүннэрэр.<br /></p><p>Муж: <a href="p172.html?s=40e67b3a001d5877">Гаврил Иванович Павлов</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p174.html?s=40e67b3a001d5877">Иван Гаврильевич Павлов</a><br />&nbsp;&nbsp;&nbsp;Сын: <a href="p175.html?s=40e67b3a001d5877">Евгений Гаврильевич Павлов</a><br /></p>
 
 <div class="c"></div>
 </div>
