--- a/index.html.files/p188.html
+++ b/index.html.files/p188.html
@@ -29,11 +29,11 @@ a:hover, a:visited { text-decoration: none; }
 
 <body>
 <script>
-window.parent.postMessage({event_id: 'gmsg', data: 'g893'}, "*");
+window.parent.postMessage({event_id: 'gmsg', data: 'g352'}, "*");
 </script>
 <div class="cwrap">
-<h1>Евфимия Ивановна (Татаринова)</h1>
-<p>Родилась: 19.06.1898<br />Умерла: ?<br />Род: Дайбанныровы<br /></p><p>Отец: <a href="p101.html?s=40e67b3a001d5877">Иван Семенович Татаринов</a><br />Мать: <a href="p106.html?s=40e67b3a001d5877">Дьэбдьиэ</a><br />Сестра: <a href="p105.html?s=40e67b3a001d5877">Устиния Ивановна (Татаринова)</a><br />Брат: <a href="p110.html?s=40e67b3a001d5877">Феодул Иванович Татаринов</a><br />Сестра: <a href="p107.html?s=40e67b3a001d5877">Васса Ивановна (Татаринова)</a><br />Сестра: <a href="p86.html?s=40e67b3a001d5877">Анисия Ивановна Татаринова</a><br />Сестра: <a href="p109.html?s=40e67b3a001d5877">Александра Ивановна (Татаринова)</a><br /></p>
+<h1>Эмилия Александровна Корнилова (Корнилов)</h1>
+<p>Родилась: 23.05.2024<br />Возраст: 1<br /></p><p>Отец: <a href="p186.html?s=40e67b3a001d5877">Александр Денисович Корнилов</a><br />Мать: <a href="p185.html?s=40e67b3a001d5877">Ариана Станиславовна Корнилова (Сивцев)</a><br />Сестра: <a href="p187.html?s=40e67b3a001d5877">Авелина Александровна (Корнилова)</a><br /></p>
 
 <div class="c"></div>
 </div>
