--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		elmnt.scrollIntoView();
 	}
 	nodeclick = function(i) {
-		document.getElementById("modalContent").innerHTML = '<iframe id="idetail" onload="currpos+=1;" src="index.html.files/p' + i + '.html?s=40e67b3ac0511840" class="modal-frame"></iframe>';
+		document.getElementById("modalContent").innerHTML = '<iframe id="idetail" onload="currpos+=1;" src="index.html.files/p' + i + '.html?s=40e67b3af408eb91" class="modal-frame"></iframe>';
 		modal.style.display = "block";
 	}
 	window.onclick = function(event) {
@@ -1124,7 +1124,7 @@
 										<rect id="r1188" class="s10" x="0.5" y="0.5" width="136.73046875" height="68.9375" rx="10" ry="10"/>
 										<g id="t1189" transform="translate(3,3)">
 											<text id="ts1190" x="2.7275390625" y="11.484375" class="s1">Валентина Васильевна</text>
-											<text id="ts1191" x="15.919921875" y="27.96875" class="s1">Попова (Павлова)</text>
+											<text id="ts1191" x="10.857421875" y="27.96875" class="s1">Попова (Игнатьева)</text>
 											<text id="ts1192" x="31.435546875" y="44.453125" class="s1">(21.11.1960)</text>
 											<text id="ts1193" x="0" y="60.9375" class="s7">2-юродная племянница</text>
 										</g>
@@ -2900,7 +2900,7 @@
 										<g id="t2090" transform="translate(3,3)">
 											<text id="ts2091" x="17.267578125" y="11.484375" class="s1">Дмитрий Иванович</text>
 											<text id="ts2092" x="44.5751953125" y="27.96875" class="s1">Ючюгяев</text>
-											<text id="ts2093" x="35.642578125" y="44.453125" class="s1">(30.01.2011)</text>
+											<text id="ts2093" x="35.642578125" y="44.453125" class="s1">(30.01.2012)</text>
 											<text id="ts2094" x="0" y="60.9375" class="s7">2-юродный правнучатый</text>
 											<text id="ts2095" x="38.923828125" y="77.421875" class="s7">племянник</text>
 										</g>
