--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		elmnt.scrollIntoView();
 	}
 	nodeclick = function(i) {
-		document.getElementById("modalContent").innerHTML = '<iframe id="idetail" onload="currpos+=1;" src="index.html.files/p' + i + '.html?s=40e67b5c87629166" class="modal-frame"></iframe>';
+		document.getElementById("modalContent").innerHTML = '<iframe id="idetail" onload="currpos+=1;" src="index.html.files/p' + i + '.html?s=40e67b5ca6abb2c1" class="modal-frame"></iframe>';
 		modal.style.display = "block";
 	}
 	window.onclick = function(event) {
@@ -84,94 +84,94 @@
 	</defs>
 	<g id="g1"/>
 	<g id="g2">
-		<rect id="r3891" class="s0" x="0" y="0" width="14851" height="1509.484375"/>
-		<rect id="r3892" class="s0" x="0" y="72" width="14852" height="144"/>
-		<g id="t3884" transform="translate(10,77)">
-			<text id="ts3885" x="0" y="11.484375" class="s1">Поколение 8 (4)</text>
-			<text id="ts3886" x="0" y="27.484375" class="s1">Количество персон: 17 (М: 9, Ж: 8)</text>
-			<text id="ts3887" x="0" y="43.484375" class="s1">Ныне живущих: 17 (М: 9, Ж: 8)</text>
-			<text id="ts3888" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: нет данных</text>
-			<text id="ts3889" x="0" y="75.484375" class="s1">Средний возраст: 5</text>
-			<text id="ts3890" x="0" y="91.484375" class="s1">Среднее число детей: 0</text>
+		<rect id="r3971" class="s0" x="0" y="0" width="14851" height="1509.484375"/>
+		<rect id="r3972" class="s0" x="0" y="72" width="14852" height="144"/>
+		<g id="t3964" transform="translate(10,77)">
+			<text id="ts3965" x="0" y="11.484375" class="s1">Поколение 8 (4)</text>
+			<text id="ts3966" x="0" y="27.484375" class="s1">Количество персон: 17 (М: 9, Ж: 8)</text>
+			<text id="ts3967" x="0" y="43.484375" class="s1">Ныне живущих: 17 (М: 9, Ж: 8)</text>
+			<text id="ts3968" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: нет данных</text>
+			<text id="ts3969" x="0" y="75.484375" class="s1">Средний возраст: 5</text>
+			<text id="ts3970" x="0" y="91.484375" class="s1">Среднее число детей: 0</text>
 		</g>
-		<rect id="r3893" class="s2" x="0" y="215" width="14852" height="180"/>
-		<g id="t3877" transform="translate(10,220)">
-			<text id="ts3878" x="0" y="11.484375" class="s1">Поколение 7 (3)</text>
-			<text id="ts3879" x="0" y="27.484375" class="s1">Количество персон: 84 (М: 42, Ж: 42)</text>
-			<text id="ts3880" x="0" y="43.484375" class="s1">Ныне живущих: 84 (М: 42, Ж: 42)</text>
-			<text id="ts3881" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: нет данных</text>
-			<text id="ts3882" x="0" y="75.484375" class="s1">Средний возраст: 17</text>
-			<text id="ts3883" x="0" y="91.484375" class="s1">Среднее число детей: 0</text>
+		<rect id="r3973" class="s2" x="0" y="215" width="14852" height="180"/>
+		<g id="t3957" transform="translate(10,220)">
+			<text id="ts3958" x="0" y="11.484375" class="s1">Поколение 7 (3)</text>
+			<text id="ts3959" x="0" y="27.484375" class="s1">Количество персон: 84 (М: 42, Ж: 42)</text>
+			<text id="ts3960" x="0" y="43.484375" class="s1">Ныне живущих: 84 (М: 42, Ж: 42)</text>
+			<text id="ts3961" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: нет данных</text>
+			<text id="ts3962" x="0" y="75.484375" class="s1">Средний возраст: 17</text>
+			<text id="ts3963" x="0" y="91.484375" class="s1">Среднее число детей: 0</text>
 		</g>
-		<rect id="r3894" class="s0" x="0" y="394" width="14852" height="196"/>
-		<g id="t3870" transform="translate(10,399)">
-			<text id="ts3871" x="0" y="11.484375" class="s1">Поколение 6 (2)</text>
-			<text id="ts3872" x="0" y="27.484375" class="s1">Количество персон: 67 (М: 37, Ж: 30)</text>
-			<text id="ts3873" x="0" y="43.484375" class="s1">Ныне живущих: 61 (М: 31, Ж: 30)</text>
-			<text id="ts3874" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: 31</text>
-			<text id="ts3875" x="0" y="75.484375" class="s1">Средний возраст: 41</text>
-			<text id="ts3876" x="0" y="91.484375" class="s1">Среднее число детей: 2</text>
+		<rect id="r3974" class="s0" x="0" y="394" width="14852" height="196"/>
+		<g id="t3950" transform="translate(10,399)">
+			<text id="ts3951" x="0" y="11.484375" class="s1">Поколение 6 (2)</text>
+			<text id="ts3952" x="0" y="27.484375" class="s1">Количество персон: 67 (М: 37, Ж: 30)</text>
+			<text id="ts3953" x="0" y="43.484375" class="s1">Ныне живущих: 61 (М: 31, Ж: 30)</text>
+			<text id="ts3954" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: 31</text>
+			<text id="ts3955" x="0" y="75.484375" class="s1">Средний возраст: 41</text>
+			<text id="ts3956" x="0" y="91.484375" class="s1">Среднее число детей: 2</text>
 		</g>
-		<rect id="r3895" class="s2" x="0" y="589" width="14852" height="197"/>
-		<g id="t3863" transform="translate(10,594)">
-			<text id="ts3864" x="0" y="11.484375" class="s1">Поколение 5 (1)</text>
-			<text id="ts3865" x="0" y="27.484375" class="s1">Количество персон: 34 (М: 19, Ж: 15)</text>
-			<text id="ts3866" x="0" y="43.484375" class="s1">Ныне живущих: 22 (М: 11, Ж: 11)</text>
-			<text id="ts3867" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: 52</text>
-			<text id="ts3868" x="0" y="75.484375" class="s1">Средний возраст: 68</text>
-			<text id="ts3869" x="0" y="91.484375" class="s1">Среднее число детей: 2</text>
+		<rect id="r3975" class="s2" x="0" y="589" width="14852" height="197"/>
+		<g id="t3943" transform="translate(10,594)">
+			<text id="ts3944" x="0" y="11.484375" class="s1">Поколение 5 (1)</text>
+			<text id="ts3945" x="0" y="27.484375" class="s1">Количество персон: 34 (М: 19, Ж: 15)</text>
+			<text id="ts3946" x="0" y="43.484375" class="s1">Ныне живущих: 22 (М: 11, Ж: 11)</text>
+			<text id="ts3947" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: 52</text>
+			<text id="ts3948" x="0" y="75.484375" class="s1">Средний возраст: 68</text>
+			<text id="ts3949" x="0" y="91.484375" class="s1">Среднее число детей: 2</text>
 		</g>
-		<rect id="r3896" class="s0" x="0" y="784" width="14852" height="164"/>
-		<g id="t3856" transform="translate(10,789)">
-			<text id="ts3857" x="0" y="11.484375" class="s1">Поколение 4 (0)</text>
-			<text id="ts3858" x="0" y="27.484375" class="s1">Количество персон: 13 (М: 6, Ж: 7)</text>
-			<text id="ts3859" x="0" y="43.484375" class="s1">Ныне живущих: 1 (М: 0, Ж: 1)</text>
-			<text id="ts3860" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: 76</text>
-			<text id="ts3861" x="0" y="75.484375" class="s1">Средний возраст: 89</text>
-			<text id="ts3862" x="0" y="91.484375" class="s1">Среднее число детей: 3</text>
+		<rect id="r3976" class="s0" x="0" y="784" width="14852" height="164"/>
+		<g id="t3936" transform="translate(10,789)">
+			<text id="ts3937" x="0" y="11.484375" class="s1">Поколение 4 (0)</text>
+			<text id="ts3938" x="0" y="27.484375" class="s1">Количество персон: 13 (М: 6, Ж: 7)</text>
+			<text id="ts3939" x="0" y="43.484375" class="s1">Ныне живущих: 1 (М: 0, Ж: 1)</text>
+			<text id="ts3940" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: 76</text>
+			<text id="ts3941" x="0" y="75.484375" class="s1">Средний возраст: 89</text>
+			<text id="ts3942" x="0" y="91.484375" class="s1">Среднее число детей: 3</text>
 		</g>
-		<rect id="r3897" class="s2" x="0" y="947" width="14852" height="163"/>
-		<g id="t3849" transform="translate(10,952)">
-			<text id="ts3850" x="0" y="11.484375" class="s1">Поколение 3 (-1)</text>
-			<text id="ts3851" x="0" y="27.484375" class="s1">Количество персон: 25 (М: 14, Ж: 11)</text>
-			<text id="ts3852" x="0" y="43.484375" class="s1">Ныне живущих: 0 (М: 0, Ж: 0)</text>
-			<text id="ts3853" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: 42</text>
-			<text id="ts3854" x="0" y="75.484375" class="s1">Средний возраст: нет данных</text>
-			<text id="ts3855" x="0" y="91.484375" class="s1">Среднее число детей: 1</text>
+		<rect id="r3977" class="s2" x="0" y="947" width="14852" height="163"/>
+		<g id="t3929" transform="translate(10,952)">
+			<text id="ts3930" x="0" y="11.484375" class="s1">Поколение 3 (-1)</text>
+			<text id="ts3931" x="0" y="27.484375" class="s1">Количество персон: 25 (М: 14, Ж: 11)</text>
+			<text id="ts3932" x="0" y="43.484375" class="s1">Ныне живущих: 0 (М: 0, Ж: 0)</text>
+			<text id="ts3933" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: 42</text>
+			<text id="ts3934" x="0" y="75.484375" class="s1">Средний возраст: нет данных</text>
+			<text id="ts3935" x="0" y="91.484375" class="s1">Среднее число детей: 1</text>
 		</g>
-		<rect id="r3898" class="s0" x="0" y="1109" width="14852" height="147"/>
-		<g id="t3842" transform="translate(10,1114)">
-			<text id="ts3843" x="0" y="11.484375" class="s1">Поколение 2 (-2)</text>
-			<text id="ts3844" x="0" y="27.484375" class="s1">Количество персон: 14 (М: 8, Ж: 6)</text>
-			<text id="ts3845" x="0" y="43.484375" class="s1">Ныне живущих: 0 (М: 0, Ж: 0)</text>
-			<text id="ts3846" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: 55</text>
-			<text id="ts3847" x="0" y="75.484375" class="s1">Средний возраст: нет данных</text>
-			<text id="ts3848" x="0" y="91.484375" class="s1">Среднее число детей: 3</text>
+		<rect id="r3978" class="s0" x="0" y="1109" width="14852" height="147"/>
+		<g id="t3922" transform="translate(10,1114)">
+			<text id="ts3923" x="0" y="11.484375" class="s1">Поколение 2 (-2)</text>
+			<text id="ts3924" x="0" y="27.484375" class="s1">Количество персон: 14 (М: 8, Ж: 6)</text>
+			<text id="ts3925" x="0" y="43.484375" class="s1">Ныне живущих: 0 (М: 0, Ж: 0)</text>
+			<text id="ts3926" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: 55</text>
+			<text id="ts3927" x="0" y="75.484375" class="s1">Средний возраст: нет данных</text>
+			<text id="ts3928" x="0" y="91.484375" class="s1">Среднее число детей: 3</text>
 		</g>
-		<rect id="r3899" class="s2" x="0" y="1255" width="14852" height="111"/>
-		<g id="t3835" transform="translate(10,1260)">
-			<text id="ts3836" x="0" y="11.484375" class="s1">Поколение 1 (-3)</text>
-			<text id="ts3837" x="0" y="27.484375" class="s1">Количество персон: 5 (М: 4, Ж: 1)</text>
-			<text id="ts3838" x="0" y="43.484375" class="s1">Ныне живущих: 0 (М: 0, Ж: 0)</text>
-			<text id="ts3839" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: нет данных</text>
-			<text id="ts3840" x="0" y="75.484375" class="s1">Средний возраст: нет данных</text>
-			<text id="ts3841" x="0" y="91.484375" class="s1">Среднее число детей: 2</text>
+		<rect id="r3979" class="s2" x="0" y="1255" width="14852" height="111"/>
+		<g id="t3915" transform="translate(10,1260)">
+			<text id="ts3916" x="0" y="11.484375" class="s1">Поколение 1 (-3)</text>
+			<text id="ts3917" x="0" y="27.484375" class="s1">Количество персон: 5 (М: 4, Ж: 1)</text>
+			<text id="ts3918" x="0" y="43.484375" class="s1">Ныне живущих: 0 (М: 0, Ж: 0)</text>
+			<text id="ts3919" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: нет данных</text>
+			<text id="ts3920" x="0" y="75.484375" class="s1">Средний возраст: нет данных</text>
+			<text id="ts3921" x="0" y="91.484375" class="s1">Среднее число детей: 2</text>
 		</g>
-		<rect id="r3900" class="s0" x="0" y="1365" width="14852" height="76"/>
-		<g id="t3828" transform="translate(10,1370)">
-			<text id="ts3829" x="0" y="11.484375" class="s1">Поколение 0 (-4)</text>
-			<text id="ts3830" x="0" y="27.484375" class="s1">Количество персон: 1 (М: 1, Ж: 0)</text>
-			<text id="ts3831" x="0" y="43.484375" class="s1">Ныне живущих: 0 (М: 0, Ж: 0)</text>
-			<text id="ts3832" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: нет данных</text>
-			<text id="ts3833" x="0" y="75.484375" class="s1">Средний возраст: нет данных</text>
-			<text id="ts3834" x="0" y="91.484375" class="s1">Среднее число детей: 1</text>
+		<rect id="r3980" class="s0" x="0" y="1365" width="14852" height="76"/>
+		<g id="t3908" transform="translate(10,1370)">
+			<text id="ts3909" x="0" y="11.484375" class="s1">Поколение 0 (-4)</text>
+			<text id="ts3910" x="0" y="27.484375" class="s1">Количество персон: 1 (М: 1, Ж: 0)</text>
+			<text id="ts3911" x="0" y="43.484375" class="s1">Ныне живущих: 0 (М: 0, Ж: 0)</text>
+			<text id="ts3912" x="0" y="59.484375" class="s1">Средняя продолжительность жизни: нет данных</text>
+			<text id="ts3913" x="0" y="75.484375" class="s1">Средний возраст: нет данных</text>
+			<text id="ts3914" x="0" y="91.484375" class="s1">Среднее число детей: 1</text>
 		</g>
-		<g id="t3901" transform="translate(6977,0)">
-			<text id="ts3902" x="0" y="45.28125" class="s3">К.Г. Блахиров, М.И. Дайбаннырова сыдьааннара</text>
+		<g id="t3981" transform="translate(6977,0)">
+			<text id="ts3982" x="0" y="45.28125" class="s3">К.Г. Блахиров, М.И. Дайбаннырова сыдьааннара</text>
 		</g>
-		<g id="t3903" transform="translate(0,1479)">
-			<text id="ts3904" x="0" y="11.484375" class="s1">Количество поколений: 9, количество персон: 260 (М: 140, Ж: 120), ныне живущих: 185 (М: 93, Ж: 92), средняя продолжительность жизни: 51, средний возраст: 29, среднее число детей: 1. Дата построения: 20.01.2026.</text>
-			<text id="ts3905" x="0" y="27.484375" class="s1">Составили: Блахирова Валентина Викторовна, Блахиров Виктор Гаврильевич</text>
+		<g id="t3983" transform="translate(0,1479)">
+			<text id="ts3984" x="0" y="11.484375" class="s1">Количество поколений: 9, количество персон: 260 (М: 140, Ж: 120), ныне живущих: 185 (М: 93, Ж: 92), средняя продолжительность жизни: 51, средний возраст: 29, среднее число детей: 1. Дата построения: 20.01.2026.</text>
+			<text id="ts3985" x="0" y="27.484375" class="s1">Составили: Блахирова Валентина Викторовна, Богдокумова Парасковья Кузьминична, Блахиров Виктор Гаврильевич</text>
 		</g>
 	</g>
 	<g id="g3" transform="translate(305,92)">
